# circuitgame

./: .gitignore  Cargo.toml  build.js  circuitgame_lib.js  circuitgame_lib_bg.wasm  index.html  index.js  out.md  package.json  readme.md  sample.ncg  tsconfig.json  typeGuards.js
.github/workflows/: BuildTest.yml  deploy.yml  release.yml
spec/: explanation4llm.md  lang.bnf  lang.without_macro.bnf  sample.md  sample.ncg
src/: circuitgame.ts  index.html  index.ts  lib.rs  main.rs  parser.rs  resourcemanager.rs  typeGuards.ts  types.ts
src/compiler/: compile.rs  mod.rs  modulecheck.rs  parser.rs  types.rs
src/rust/: lib.rs  main.rs  resourcemanager.rs
src/rust/compiler/: compile.rs  mod.rs  modulecheck.rs  parser.rs  types.rs
src/rust/native/: common.rs  document.rs  index.html  mod.rs  server.rs  watch.rs  withoutserver.rs
src/rust/test/: mod.rs  test.rs  testcheck.rs  types.rs
src/rust/transpiler/: c_transpiler.rs  js_transpiler.rs  mod.rs  rs_transpiler.rs  ts_transpiler.rs
src/rust/vm/: deserializer.rs  mod.rs  types.rs
src/test/: mod.rs  test.rs  testcheck.rs  types.rs
src/vm/: deserializer.rs  mod.rs  types.rs
src/web/: circuitgame.ts  editor.mode.ts  index.html  index.ts  typeGuards.ts  types.ts  vm.ts
