[package]
name = "circuitgame"
version = "0.1.0"
edition = "2021"

[package.metadata]
path = "src/rust/main.rs"

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
nom = "7.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
clap_derive = { version = "4.5.4" }
clap = { version = "4.5.4", features = ["derive"] }
byteorder = "1.4"
colored = "2.0"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }

[[bin]]
name = "circuitgame_bin"
path = "src/rust/main.rs"

[lib]
name = "circuitgame_lib"
crate-type = ["cdylib"]
path = "src/rust/lib.rs"

[features]
web = ["wasm-bindgen"]