[package]
name = "circuitgame"
version = "0.1.0"
edition = "2021"

[package.metadata]
path = "src/rust/main.rs"

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
nom = "7.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
byteorder = "1.4"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }
regex = "1"

clap_derive = { version = "4.5.4", optional = true }
clap = { version = "4.5.4", features = ["derive"], optional = true }
colored = { version = "2.0", optional = true }
tokio = { version = "1", features = ["full"], optional = true  }
warp = { version = "0.3", optional = true }
tokio-tungstenite = { version = "0.17", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
notify = { version = "5.1", optional = true }
futures-util = { version = "0.3", optional = true }
crossterm = { version = "0.28.1", optional = true }
crossbeam = { version = "0.8.4", optional = true }

[[bin]]
name = "circuitgame_bin"
path = "src/rust/main.rs"

[lib]
name = "circuitgame_lib"
crate-type = ["cdylib"]
path = "src/rust/lib.rs"

[features]
default = ["native"]

web = ["wasm-bindgen"]
native = ["clap_derive","clap","colored","tokio","warp","tokio-tungstenite","crossbeam-channel","notify","futures-util","crossterm","crossbeam"]